font files added; fonts included in css

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,32 @@
-/* common classes */
+@font-face {
+    font-family: Montserrat;
+    font-weight: 400;
+    src: url("/fonts/Montserrat-Regular.woff2"),
+        url("/fonts/Montserrat-Regular.woff");
+}
 
+@font-face {
+    font-family: Montserrat;
+    font-weight: 600;
+    src: url("/fonts/Montserrat-SemiBold.woff2"),
+        url("/fonts/Montserrat-SemiBold.woff");
+}
+
+@font-face {
+    font-family: Montserrat;
+    font-weight: 700;
+    src: url("/fonts/Montserrat-Bold.woff2"),
+        url("/fonts/Montserrat-Bold.woff");
+}
+
+@font-face {
+    font-family: Montserrat;
+    font-weight: 800;
+    src: url("/fonts/Montserrat-ExtraBold.woff2"),
+        url("/fonts/Montserrat-ExtraBold.woff");
+}
+
+/* common classes */
 * {
     box-sizing: border-box;
 }
@@ -15,9 +42,7 @@ body {
     width: 1770px;
 }
 
-.section-heading {
-    
-}
+.section-heading {}
 
 .button {
     display: inline-block;
