--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@
     box-sizing: border-box;
 }
 
+ul {
+    padding: 0;
+}
+
 body {
     background-color: #FFF;
 }
@@ -64,6 +68,7 @@ body {
     display: inline-block;
     background-color: #FF9900;
     color: #FFF;
+    padding: 20px 38px;
 
     font-family: Montserrat;
     font-size: 16px;
@@ -85,29 +90,28 @@ body {
 
 /* header */
 .header {
+    display: block;
     height: 100px;
+    position: relative;
 
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-    position: absolute;
-    left: 0px;
-    right: 0px;
 }
 
 .header__container {
     padding: 14px 0px 14px 0px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.header__spacer {
-    height: 100px;
-}
-
 .top-nav__list {
-    display: flex;
     list-style: none;
     align-items: center;
+}
+
+.top-nav__item {
+    display: inline-block;
 }
 
 .top-nav__item:not(:last-child) {
@@ -160,7 +164,6 @@ body {
     border: 2px solid transparent;
     width: 24px;
     height: 24px;
-    margin-right: 75px;
 }
 
 .top-nav__search-button:hover path {
@@ -232,4 +235,64 @@ body {
 .about__content {
     margin-bottom: 50px;
     width: 69.5%;
+}
+
+.about__card-block {
+    display: flex;
+}
+
+.about__card-block-left {
+    background-image: url("/img/about/about__img1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height: 622px;
+    width: 50%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.about__card-block-left-content {
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+    background-color: rgba(0, 0, 0, 0.5);
+
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 32px;
+}
+
+.about__card-block-left-text {
+    margin: 0px;
+    max-width: 70%;
+}
+
+.about__card-block-left__button {
+
+}
+/* 
+@media (max-width: 1920px) {
+    .container {
+        width: 80vw;
+    }
+} */
+
+@media (max-width: 1769px) {
+    .container {
+        width: auto;
+        margin: 0 !important;
+    }
+}
+
+@media (max-width: 1499px) {
+    .top-nav {
+        display: none;
+    }
 }
