footer build update

--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,96 @@ body {
     display: none;
 }
 
+/* footer */
+.footer {
+    background-color:#222222;
+}
+
+.footer__container {
+    display: flex;
+
+    padding: 50px 0px;
+}
+
+.footer__left,
+.footer__right,
+.footer__center {
+    flex: 1 1 33.3%;
+}
+
+.footer__logo {
+    width: 224px;
+    height: 72px;
+    display: inline-block;
+    margin-bottom: 20px;
+    
+    background: url("/img/footer/footer-logo.png") no-repeat center center;
+}
+
+.footer-nav__list {
+    list-style: none;
+    margin: 0;
+}
+
+.footer-nav__link {
+    color: #CACACA;
+    text-decoration: none;
+    font-family: Montserrat;
+    font-size: 18px;
+    line-height: 36px;
+    font-weight: 600;  
+}
+
+.footer__heading {
+    color: #CACACA;
+    margin-bottom: 25px;
+}
+
+.footer__right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.footer__content {
+    /* display: block; */
+    /* margin-left: auto; */
+    padding-left: 33%;
+    margin: 0;
+    
+
+    color: #CACACA;
+    /* min-width: 70%; */
+}
+
+.footer__center {
+    flex: 0 1 570px;
+}
+
+.footer-form__text-input {
+    display: block;
+    height: 60px;
+    width: 100%;
+    margin-bottom: 25px;
+    padding-left: 24px;
+    
+    color: #FFF;
+    background-color: #414141;
+    border: none;
+}
+
+.footer-form__text-input::placeholder {
+    color: #CACACA;
+}
+
+.footer-form__textarea {
+    padding: 14px 24px;
+    height: 150px;
+    margin-bottom: 32px;
+
+    resize: none;
+}
+
 @media (max-width: 1870px) {
     .container {
         width: auto;
