--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@
     box-sizing: border-box;
 }
 
+.gray-text {
+    color: #CACACA;
+}
+
 *:focus {
     outline: 2px solid #FF9900;
 }
@@ -168,7 +172,7 @@ body {
     height: 100px;
     position: relative;
 
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 4px 3px 0px rgb(0 0 0 / 24%);
 }
 
 .header__container {
@@ -327,6 +331,10 @@ body {
 
 .about__card-block {
     display: flex;
+}
+
+.about__card-block-right {
+    flex: 1 1;
 }
 
 .about__card-block-left {
