--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,10 @@ body {
     align-items: center;
 }
 
+.header__burger {
+    display: none;
+}
+
 .top-nav__list {
     list-style: none;
     align-items: center;
@@ -272,7 +276,7 @@ body {
 }
 
 .hero__container {
-    padding: 100px 0px 0px 80px;
+    padding: 100px 0px 100px 80px;
     min-height: 620px;
 
     background-image: url("/img/hero/bg1.jpg");
@@ -755,7 +759,14 @@ body {
 }
 
 @media (max-width: 1340px) {
-    .top-nav {
+    .top-nav__item {
         display: none;
+    }
+
+    .header__container {
+    }
+
+    .header__burger {
+        display: block;
     }
 }
