--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ body {
 }
 
 .hero__container {
-    padding: 100px 0px 100px 80px;
+    padding: 100px 80px 100px 80px;
     min-height: 620px;
 
     background-image: url("/img/hero/bg1.jpg");
@@ -285,7 +285,7 @@ body {
 }
 
 .hero__heading {
-    max-width: 55%;
+    max-width: 850px;
     margin: 0px 0px 25px 0px;
 
     color: #FFF;
@@ -305,7 +305,7 @@ body {
 }
 
 .hero__content {
-    max-width: 50%;
+    max-width: 850px;
     margin: 0px 0px 90px 0px;
 
     color: #FFF;
@@ -326,23 +326,27 @@ body {
 
 .about__content {
     margin-bottom: 50px;
-    width: 69.5%;
+    max-width: 1235px;
 }
 
 .about__card-block {
     display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
 }
 
 .about__card-block-right {
     flex: 1 1;
+    min-width: 870px;
 }
 
 .about__card-block-left {
-    height: 622px;
-    width: 868px;
-    margin-right: 32px;
+    /* height: 622px; */
+    /* width: 868px; */
+    /* margin-right: 32px; */
+    aspect-ratio: 868 / 622;
 
-    flex: 0 1 868px;
+    flex: 1 1 868px;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -355,6 +359,7 @@ body {
 .about__card-block-left-content {
     padding: 50px;
     display: flex;
+    flex: 1 1;
     align-items: center;
     justify-content: space-between;
 
@@ -470,8 +475,10 @@ body {
     display: none;
     min-height: 460px;
 
-    padding-right: 1000px;
+    padding-right: 58%;
     padding-bottom: 110px;
+
+    background-size: 100px 100px;
 }
 
 .how-we-work__slide:nth-child(1) {
@@ -768,5 +775,15 @@ body {
 
     .header__burger {
         display: block;
+    }
+}
+
+@media (max-width: 1100px) {
+    .hero__heading {
+        font-size: 60px;
+    }
+
+    .hero__content {
+        font-size: 20px;
     }
 }
